# syncopate

./: .clang-format  .gitignore
client/: analysis_options.yaml  pubspec.yaml
client/android/app/: build.gradle.kts
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/example/syncopate/: MainActivity.kt
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/models/: packet_factory.dart  packet_type.dart  platform_type.dart  track_task.dart
client/test/: protocol_test.dart  widget_test.dart
server/: CMakeLists.txt
server/cmake/: format.cmake
server/include/config/: engine.hpp  logger.hpp  network.hpp
server/include/engine/: merger_pool.hpp  merger_queue.hpp  platform.hpp  track.hpp
server/include/logger/: logger.hpp
server/include/network/: packet.hpp  protocol_parser.hpp  session_manager.hpp  tcp_listener.hpp
server/src/: CMakeLists.txt  main.cpp
server/src/engine/: CMakeLists.txt  merger_pool.cpp  merger_queue.cpp
server/src/logger/: CMakeLists.txt  logger.cpp
server/src/network/: CMakeLists.txt  protocol_parser.cpp  tcp_listener.cpp
server/tests/: CMakeLists.txt
server/tests/engine/: test_merger_engine.cpp
server/tests/integration/: CMakeLists.txt  test_protocol_parsing.cpp
server/tests/network/: test_tcp_listener.cpp
server/tests/unit/: CMakeLists.txt
